User details retrieval using pagination and sorting from jparepository